crates/rationes/tests/snapshots/contract__verb_rm_holding.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 322
expression: pretty(&removed)
---
{
  "deleted": "checking",
  "series": "checking"
}
