crates/rationes/tests/snapshots/contract__verb_rm_reading.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 346
expression: pretty(&removed)
---
{
  "deleted": "20260719",
  "series": "checking"
}
