crates/rationes/tests/snapshots/contract__version.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 146
expression: pretty(&version)
---
{
  "format_version": 2,
  "name": "rationes",
  "short": "rat",
  "version": "0.1.0"
}
